--- a/Retos/sesion3-reto1/RoggerValverde/package.json
+++ b/Retos/sesion3-reto1/RoggerValverde/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rogger Valverde",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "crc-32": "^1.2.0",
+    "yargs": "^13.2.4"
+  }
 }
