Se desinstalo babel y se comenzo a usar require en lugar de import

--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -4,17 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.5"
-  },
+  "devDependencies": {},
   "dependencies": {
     "colors": "^1.3.3",
     "yargs": "^13.2.4"
