--- a/Retos/sesion3-reto1/RoggerValverde/package.json
+++ b/Retos/sesion3-reto1/RoggerValverde/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles"
   },
   "author": "Rogger Valverde",
   "license": "ISC",
@@ -12,5 +12,8 @@
     "chalk": "^2.4.2",
     "crc-32": "^1.2.0",
     "yargs": "^13.2.4"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
