--- a/training/package.json
+++ b/training/package.json
@@ -4,9 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "watch":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  }
 }
