--- a/RoadMap/season2/phase2/babel/serverless.yml
+++ b/RoadMap/season2/phase2/babel/serverless.yml
@@ -1,6 +1,5 @@
 service: babel-example
 
-# Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
   - serverless-offline
@@ -11,16 +10,18 @@ provider:
 
 functions:
   first:
-    handler: first.hello
+    handler: handlers/first.hello
     events:
       - http:
           method: get
           path: first
           integration: lambda
+          cors: true 
   second:
-    handler: second.hello
+    handler: handlers/second.hello
     events:
       - http:
           method: get
           path: second
           integration: lambda
+          cors: true 
